# drr_utils

./: .gitignore  LICENSE  README.md  README_CN.md  main_3d_vis.py  main_detection_segmentation_infer_eval_vis.py  main_drr_detection_dataset.py  main_drr_segmentation_dataset.py  main_not_cut_segmentation_dataset.py  main_paxray_dataset.py  readme.md  test.py
ITK_tools/: linux_genDRR.py  windows_genDRR.py
ITK_tools/Linux_ITK_Gen_Drr/: CMakeLists.txt  gen_multidrrs.cpp  gendrr.cpp
config/: detection_config.yml  not_cut_segmentation_config.yml  object_detection_segmentation_infer.yml  segmentation_config.yml
dataset_tools/: crop_drr_for_classify.py  dataset_sample.py  dataset_statistics.py  random_choose_dataset.py  random_split_dataset.py  rename_verse_predict_nii.py  verse2019_fracture_split.py  x2coco.py
detection_tools/: according_mask_add_rotation_bbox.py  coco_detection_data.py  detection_result_json.py  object_detection.py
document/: Conver_Dataset_to_fracture_annotation.md  Dataset_format.md  Dataset_prepare.md  Detection_parameter_configuration_description.md  Segmentation_parameter_configuration_desription.md  Ubuntu_ITK_install.md
drr_tools/: drr_image_postprocess.py  genDRR.py  genDRR_python.py
eval_tools/: detection_eval.py  segmentation_eval.py
io_tools/: baidunetdisk_upload.py  file_copy.py  file_management.py
nii_tools/: check_images.py  crop_images.py  merge_images.py  nii_process.py  rename_verse_predict_seg.py  reoriented_images.py  verse_check_images.py  verse_format_conver.py  verse_rename_images.py  verse_separate_mask.py
(+36 files in other folders)
